--- a/content_script.css
+++ b/content_script.css
@@ -15,6 +15,8 @@
   left: 50%;
   width: 80%;
   max-height: 80%;
+  flex-direction: column;
+  gap: 2rem;
   padding: 30px;
   background: #333;
   border-radius: 2%;
@@ -29,9 +31,5 @@
 }
 
 #coc_scraper.active, #coc_scraper_overlay.active {
-  display: block;
-}
-
-#coc_scraper details {
-  margin-bottom: 2rem;
+  display: flex;
 }
